--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "graphql-request": "^6.1.0",
+    "panzoom": "^9.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.11.0",
