--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "graphql-request": "^6.1.0",
+    "leaflet": "^1.9.4",
     "panzoom": "^9.4.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
