--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-leaflet": "^4.2.1",
+    "react-resize-detector": "^9.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
