--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-resize-detector": "^9.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.0",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
