--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "homepage": "https://www.iznaroth.com",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.5",
+    "@mui/material": "^5.14.7",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
