--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
+    "react-helmet-async": "^2.0.5",
     "react-leaflet": "^4.2.1",
     "react-resize-detector": "^9.1.0",
     "react-router-dom": "^6.13.0",
